RESOLVED FIXED205387
[CoordinatedGraphics] ThreadedDisplayRefreshMonitor is never released
https://bugs.webkit.org/show_bug.cgi?id=205387
Summary [CoordinatedGraphics] ThreadedDisplayRefreshMonitor is never released
Carlos Garcia Campos
Reported 2019-12-18 04:15:04 PST
The problem is that DisplayRefreshMonitorManager::createMonitorForClient() always creates a new one for RenderingUpdateScheduler because it's not notified of the window screen change. So, createDisplayRefreshMonitor() is called every time, which returns a reference of the same object, but it's added to the monitors Vector of DisplayRefreshMonitorManager and never removed from there.
Attachments
Patch (7.75 KB, patch)
2019-12-18 04:24 PST, Carlos Garcia Campos
no flags
Try to fix wincairo build (7.73 KB, patch)
2019-12-19 01:11 PST, Carlos Garcia Campos
zan: review+
Carlos Garcia Campos
Comment 1 2019-12-18 04:24:24 PST
Zan Dobersek
Comment 2 2019-12-18 07:04:06 PST
Comment on attachment 385956 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385956&action=review > Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:574 > + changeWindowScreen(); This is problematic, cause the lambda is using m_layerTreeHost which is null.
Carlos Garcia Campos
Comment 3 2019-12-19 00:24:42 PST
Comment on attachment 385956 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=385956&action=review >> Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp:574 >> + changeWindowScreen(); > > This is problematic, cause the lambda is using m_layerTreeHost which is null. This is called right after setting m_layerTreeHost, or does the lambda capture the value at the time it's declared, even when a reference is passed? It's not crashing here, for sure.
Carlos Garcia Campos
Comment 4 2019-12-19 01:11:56 PST
Created attachment 386083 [details] Try to fix wincairo build
Carlos Garcia Campos
Comment 5 2019-12-19 01:44:59 PST
Note You need to log in before you can comment on or make changes to this bug.