Source/WebCore/page/Chrome.cpp
@@ -511,6 +511,9 @@ void Chrome::windowScreenDidChange(PlatformDisplayID displayID)
             frame->document()->windowScreenDidChange(displayID);
     }
 
+#if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
+    m_page.renderingUpdateScheduler().windowScreenDidChange(displayID);
+#endif
     m_page.setNeedsRecalcStyleInAllFrames();
 
 #if PLATFORM(MAC) && ENABLE(GRAPHICS_CONTEXT_3D)
