Source/WebCore/page/RenderingUpdateScheduler.h
@@ -50,10 +50,13 @@ public:
     void scheduleImmediateRenderingUpdate();
     void scheduleRenderingUpdate();
 
+#if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
+    void windowScreenDidChange(PlatformDisplayID);
+#endif
+
 private:
 #if USE(REQUEST_ANIMATION_FRAME_DISPLAY_MONITOR)
     RefPtr<DisplayRefreshMonitor> createDisplayRefreshMonitor(PlatformDisplayID) const final;
-    void windowScreenDidChange(PlatformDisplayID);
     void displayRefreshFired() final;
 #else
     void displayRefreshFired();
